set(ITKCommon_SRCS
itkLoggerOutput.cxx
itkProgressAccumulator.cxx
itkNumericTraits.cxx
itkMutexLock.cxx
itkHexahedronCellTopology.cxx
itkIndent.cxx
itkEventObject.cxx
itkFileOutputWindow.cxx
itkSimpleFilterWatcher.cxx
itkNumericTraitsVectorPixel.cxx
itkObject.cxx
itkDynamicLoader.cxx
itkQuadrilateralCellTopology.cxx
itkIterationReporter.cxx
itkMemoryProbe.cxx
itkTextOutput.cxx
itkNumericTraitsTensorPixel2.cxx
itkNumericTraitsFixedArrayPixel2.cxx
itkConditionVariable.cxx
itkProcessObject.cxx
itkBarrier.cxx
itkSpatialOrientationAdapter.cxx
itkRealTimeInterval.cxx
itkOctreeNode.cxx
itkNumericTraitsFixedArrayPixel.cxx
itkMultiThreader.cxx
itkMetaDataObject.cxx
itkMetaDataDictionary.cxx
itkDataObject.cxx
itkThreadLogger.cxx
itkNumericTraitsTensorPixel.cxx
itkCommand.cxx
itkNumericTraitsPointPixel.cxx
itkLightObject.cxx
itkStdStreamLogOutput.cxx
itkLightProcessObject.cxx
itkRegion.cxx
itkImageIORegion.cxx
itkImageSource.cxx
itkImageRegionSplitterBase.cxx
itkImageRegionSplitterSlowDimension.cxx
itkImageRegionSplitterDirection.cxx
itkImageRegionSplitterMultidimensional.cxx
itkFastMutexLock.cxx
itkVersion.cxx
itkNumericTraitsRGBAPixel.cxx
itkRealTimeClock.cxx
itkMetaDataObjectBase.cxx
itkCovariantVector.cxx
itkMemoryUsageObserver.cxx
itkMersenneTwisterRandomVariateGenerator.cxx
itkLoggerBase.cxx
itkNumericTraitsCovariantVectorPixel.cxx
itkProgressReporter.cxx
itkExceptionObject.cxx
itkMultipleLogOutput.cxx
itkQuadraticTriangleCellTopology.cxx
itkTimeProbesCollectorBase.cxx
itkSmapsFileParser.cxx
itkTriangleCellTopology.cxx
itkVector.cxx
itkRealTimeStamp.cxx
itkDirectory.cxx
itkLoggerManager.cxx
itkTimeProbe.cxx
itkNumericTraitsRGBPixel.cxx
itkTimeStamp.cxx
itkTetrahedronCellTopology.cxx
itkThreadedIndexedContainerPartitioner.cxx
itkObjectFactoryBase.cxx
itkFloatingPointExceptions.cxx
itkOutputWindow.cxx
itkSimpleFastMutexLock.cxx
itkNumericTraitsDiffusionTensor3DPixel.cxx
itkEquivalencyTable.cxx
itkXMLFileOutputWindow.cxx
itkStoppingCriterionBase.cxx
itkCompensatedSummation.cxx
itkArrayOutputSpecialization.cxx
itkNumberToString.cxx
itkSmartPointerForwardReferenceProcessObject.cxx
itkThreadPool.cxx
itkConstNeighborhoodIteratorExplicit.cxx
itkAnnulusOperatorExplicit.cxx
itkArrayExplicit.cxx
itkAtanRegularizedHeavisideStepFunctionExplicit.cxx
itkAutoPointerDataObjectDecoratorExplicit.cxx
itkBSplineDerivativeKernelFunctionExplicit.cxx
itkBSplineInterpolationWeightFunctionExplicit.cxx
itkBSplineKernelFunctionExplicit.cxx
itkBackwardDifferenceOperatorExplicit.cxx
itkBoundingBoxExplicit.cxx
itkCellInterfaceExplicit.cxx
itkChildTreeIteratorExplicit.cxx
itkColorTableExplicit.cxx
itkConditionalConstIteratorExplicit.cxx
itkConstNeighborhoodIteratorExplicit.cxx
itkConstNeighborhoodIteratorWithOnlyIndexExplicit.cxx
itkConstShapedNeighborhoodIteratorExplicit.cxx
itkConstantBoundaryConditionExplicit.cxx
itkCreateObjectFunctionExplicit.cxx
itkDataObjectDecoratorExplicit.cxx
itkDefaultPixelAccessorExplicit.cxx
itkDefaultVectorPixelAccessorExplicit.cxx
itkDerivativeOperatorExplicit.cxx
itkDomainThreaderExplicit.cxx
itkEllipsoidInteriorExteriorSpatialFunctionExplicit.cxx
itkExtractImageFilterExplicit.cxx
itkFiniteCylinderSpatialFunctionExplicit.cxx
itkFloodFilledFunctionConditionalConstIteratorExplicit.cxx
itkFloodFilledSpatialFunctionConditionalIteratorExplicit.cxx
itkForwardDifferenceOperatorExplicit.cxx
itkGaussianOperatorExplicit.cxx
itkGaussianSpatialFunctionExplicit.cxx
itkHeavisideStepFunctionExplicit.cxx
itkHexahedronCellExplicit.cxx
itkImageBaseExplicit.cxx
itkImageConstIteratorExplicit.cxx
itkImageConstIteratorWithIndexExplicit.cxx
itkImageConstIteratorWithOnlyIndexExplicit.cxx
itkImageDuplicatorExplicit.cxx
itkImageExplicit.cxx
itkImageIteratorExplicit.cxx
itkImageLinearConstIteratorWithIndexExplicit.cxx
itkImageLinearIteratorWithIndexExplicit.cxx
itkImageRandomConstIteratorWithIndexExplicit.cxx
itkImageRandomConstIteratorWithOnlyIndexExplicit.cxx
itkImageRandomIteratorWithIndexExplicit.cxx
itkImageRandomNonRepeatingConstIteratorWithIndexExplicit.cxx
itkImageRandomNonRepeatingIteratorWithIndexExplicit.cxx
itkImageRegionConstIteratorExplicit.cxx
itkImageRegionConstIteratorWithIndexExplicit.cxx
itkImageRegionConstIteratorWithOnlyIndexExplicit.cxx
itkImageRegionExclusionConstIteratorWithIndexExplicit.cxx
itkImageRegionExclusionIteratorWithIndexExplicit.cxx
itkImageRegionExplicit.cxx
itkImageRegionIteratorExplicit.cxx
itkImageRegionIteratorWithIndexExplicit.cxx
itkImageRegionReverseConstIteratorExplicit.cxx
itkImageRegionReverseIteratorExplicit.cxx
itkImageReverseConstIteratorExplicit.cxx
itkImageScanlineConstIteratorExplicit.cxx
itkImageScanlineIteratorExplicit.cxx
itkImageSliceConstIteratorWithIndexExplicit.cxx
itkImageSliceIteratorWithIndexExplicit.cxx
itkImageSourceExplicit.cxx
itkImageToImageFilterExplicit.cxx
itkImageVectorOptimizerParametersHelperExplicit.cxx
itkImportImageContainerExplicit.cxx
itkImportImageFilterExplicit.cxx
itkInOrderTreeIteratorExplicit.cxx
itkLaplacianOperatorExplicit.cxx
itkLeafTreeIteratorExplicit.cxx
itkLevelOrderTreeIteratorExplicit.cxx
itkLineCellExplicit.cxx
itkLineConstIteratorExplicit.cxx
itkLineIteratorExplicit.cxx
itkLoggerThreadWrapperExplicit.cxx
itkMapContainerExplicit.cxx
itkMetaDataObjectExplicit.cxx
itkMinimumMaximumImageCalculatorExplicit.cxx
itkNeighborhoodAccessorFunctorExplicit.cxx
itkNeighborhoodExplicit.cxx
itkNeighborhoodIteratorExplicit.cxx
itkObjectStoreExplicit.cxx
itkOctreeExplicit.cxx
itkOptimizerParametersExplicit.cxx
itkOptimizerParametersHelperExplicit.cxx
itkPeriodicBoundaryConditionExplicit.cxx
itkPhasedArray3DSpecialCoordinatesImageExplicit.cxx
itkPointSetExplicit.cxx
itkPolygonCellExplicit.cxx
itkPostOrderTreeIteratorExplicit.cxx
itkPreOrderTreeIteratorExplicit.cxx
itkPriorityQueueContainerExplicit.cxx
itkQuadraticEdgeCellExplicit.cxx
itkQuadraticTriangleCellExplicit.cxx
itkQuadrilateralCellExplicit.cxx
itkResourceProbeExplicit.cxx
itkResourceProbesCollectorBaseExplicit.cxx
itkRootTreeIteratorExplicit.cxx
itkShapedNeighborhoodIteratorExplicit.cxx
itkSimpleDataObjectDecoratorExplicit.cxx
itkSinRegularizedHeavisideStepFunctionExplicit.cxx
itkSmartPointerExplicit.cxx
itkSmartPointerForwardReferenceExplicit.cxx
itkSobelOperatorExplicit.cxx
itkSparseFieldLayerExplicit.cxx
itkSparseImageExplicit.cxx
itkSpecialCoordinatesImageExplicit.cxx
itkSphereSpatialFunctionExplicit.cxx
itkStreamingImageFilterExplicit.cxx
itkSymmetricEllipsoidInteriorExteriorSpatialFunctionExplicit.cxx
itkTetrahedronCellExplicit.cxx
itkThreadedImageRegionPartitionerExplicit.cxx
itkThreadedIteratorRangePartitionerExplicit.cxx
itkTreeChangeEventExplicit.cxx
itkTreeContainerExplicit.cxx
itkTreeIteratorBaseExplicit.cxx
itkTreeNodeExplicit.cxx
itkTriangleCellExplicit.cxx
itkUnaryFunctorImageFilterExplicit.cxx
itkVectorContainerExplicit.cxx
itkVectorImageExplicit.cxx
itkVertexCellExplicit.cxx
itkZeroFluxNeumannBoundaryConditionExplicit.cxx
itkImageExplicit.cxx
)

set(ITK_COMMON_EXPLICIT_SOURCES
itkConstNeighborhoodIteratorExplicit.cxx
)

if(WIN32)
  list(APPEND ITKCommon_SRCS itkWin32OutputWindow.cxx)
  list(APPEND ITKCommon_SRCS itkWin32OutputWindow.cxx itkWinThreadPool.cxx)
else()
  list(APPEND ITKCommon_SRCS itkPThreadPool.cxx)
endif()

# Prevent optimization from affecting the floating point calculation.
if( CMAKE_CXX_COMPILER MATCHES "^icc" )
  if( WIN32 )
    set_source_files_properties( itkCompensatedSummation.cxx PROPERTIES COMPILE_FLAGS /fp precise )
  else()
    set_source_files_properties( itkCompensatedSummation.cxx PROPERTIES COMPILE_FLAGS -fp-model precise )
  endif()
elseif( CMAKE_COMPILER_IS_GNUCXX )
  # -fno-associative-math appears to only be present in GCC 4.3 onwards.
  include( CheckCXXCompilerFlag )
  CHECK_CXX_COMPILER_FLAG( -fno-associative-math gcc_has_no_associative_math )
  if( gcc_has_no_associative_math )
    set_source_files_properties( itkCompensatedSummation.cxx PROPERTIES COMPILE_FLAGS -fno-associative-math )
  else()
    set_source_files_properties( itkCompensatedSummation.cxx PROPERTIES COMPILE_FLAGS -fno-unsafe-math-optimizations )
  endif()
elseif( MSVC )
  set_source_files_properties( itkCompensatedSummation.cxx PROPERTIES COMPILE_FLAGS -fp:precise )
endif()

if( CMAKE_CXX_COMPILER_ID MATCHES Clang AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.0" )
  # this file contains explicitly instantiated template classes which are not correcly exported with the hidden visibility flag
  set_source_files_properties( itkSmartPointerForwardReferenceProcessObject.cxx PROPERTIES COMPILE_FLAGS -fvisibility=default )
endif()


### generating libraries
add_library( ITKCommon ${ITK_LIBRARY_BUILD_TYPE} ${ITKCommon_SRCS})

target_link_libraries(ITKCommon
  itksys
  ITKVNLInstantiation
  ${ITKDoubleConversion_LIBRARIES})

if(UNIX)
  target_link_libraries(ITKCommon ${CMAKE_THREAD_LIBS} ${CMAKE_DL_LIBS} -lm)
endif()

itk_module_target(ITKCommon)
