if(ITK_TEMPLATE_EXPLICIT_INSTANTIATION)
  file(GLOB ITK_ITKIOCSV_EXPLICIT_SOURCES "*Explicit.cxx")
endif()

set(ITKIOCSV_SRC
itkCSVFileReaderBase.cxx
${ITK_ITKIOCSV_EXPLICIT_SOURCES}
)

add_library(ITKIOCSV ${ITKIOCSV_SRC})
target_link_libraries(ITKIOCSV  ${ITKIOImageBase_LIBRARIES})
itk_module_target(ITKIOCSV)
